// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  }
}"
`;

exports[`with complex computed list 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test-data-source\\"
    }
  },
  \\"data\\": {
    \\"test_data_source\\": {
      \\"test\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test\\",
            \\"uniqueId\\": \\"test\\"
          }
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"testresource\\": {
        \\"name\\": \\"\${data.test_data_source.test.complex_computed_list.0.id}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test-data-source/test-resource\\",
            \\"uniqueId\\": \\"testresource\\"
          }
        }
      }
    }
  }
}"
`;
